# ROBOT_BFD

./: BfD_code_pipeline_overview.md  LICENSE  README.md  degradation_v2.py  fcm_v2.py  pyproject.toml  test.py  visualization_segment.py
docs/: IMPLEMENTATION_STATUS.md
scripts/: run_pipeline_to_degradation.py
src/bfd_pipeline/: pipeline.py
src/bfd_pipeline/consequence/: fcm.py  rollout.py
src/bfd_pipeline/core/: types.py
src/bfd_pipeline/data/: demo_io.py
src/bfd_pipeline/degradation/: candidate.py  hypothesis.py  validator.py
src/bfd_pipeline/envs/: base_adapter.py  synthetic_env.py
src/bfd_pipeline/features/: engine.py  feature_functions.py  normalization.py  profiler.py  registry.py
src/bfd_pipeline/segmentation/: evidence.py  segmenter.py  subgoal_inference.py
tests/synthetic/: test_pipeline_to_degradation.py
tests/unit/: test_demo_loader.py  test_feature_engine.py  test_feature_registry.py  test_profiler_segmentation.py
탬탬버린_뇨롱이/: collect_demo.py  degradation.py  fcm.py  feature_select.py  phase_segment.py
탬탬버린_뇨롱이/artifacts/degradation/: degradation_gate.json  degradation_hypotheses.json  degradation_metrics.json  lambda_search_results.json  screened_candidates.json  validated_families.json
탬탬버린_뇨롱이/artifacts/fcm/: fcm_gate.json  fcm_metrics.json  fcm_model.joblib  fcm_screening.json
탬탬버린_뇨롱이/artifacts/features/: feature_manifest.json  feature_profiles.json  features_demo_1.npz  normalization_stats.json
탬탬버린_뇨롱이/docs/: BfD_code_pipeline_blueprint_v4_simple.md  final_structured_degradation_project_proposal.md
(+8 files in other folders)
